--- a/SCSS/config/media.scss
+++ b/SCSS/config/media.scss
@@ -5,6 +5,13 @@
 }
 
 
+@mixin notebook{
+    @media screen and (max-width: $notebook){
+        @content;
+    }
+}
+
+
 @mixin tablet{
     @media screen and (max-width: $tablet){
         @content;
@@ -14,6 +21,12 @@
 
 @mixin phone{
     @media screen and (max-width: $phone){
+        @content;
+    }
+}
+
+@mixin phone_mini{
+    @media screen and (max-width: $phone_mini){
         @content;
     }
 }
