--- a/SCSS/layout/_adjustment.scss
+++ b/SCSS/layout/_adjustment.scss
@@ -30,6 +30,10 @@ h2{
         
     }
 
+    @include phone_mini{
+        font-size: 43px;
+    }
+
 }
 .container{
     display: flex;
@@ -51,3 +55,8 @@ h2{
       width: rem(1px) !important; 
       overflow: hidden;
   }
+
+
+  .review__title, .map__title {
+    display: none;
+}
