--- a/SCSS/layout/_base.scss
+++ b/SCSS/layout/_base.scss
@@ -1,11 +1,17 @@
 
 html {
+    font-size: 14px;
+
  @include tablet {
-     font-size: 14px;
+     font-size: 13px;
  }
 
  @include phone {
-     font-size: 13px;
+     font-size: 12px;
+ }
+
+ @include phone_mini{
+     font-size: 10px;
  }
 }
 
@@ -15,7 +21,7 @@ body{
     -webkit-font-smoothing: antialiased;
     -moz-osx-font-smoothing: grayscale;
     color: #000000;
-  font-size: rem(14px);
+  
 
 }
 
@@ -30,4 +36,8 @@ ul{
     padding: 0;
     list-style: none;
 
+}
+
+p{
+    margin: 0;
 }
