--- a/SCSS/main.scss
+++ b/SCSS/main.scss
@@ -7,8 +7,13 @@
 
 //RESOLUTION//
 
+$notebook: 850px;
+
 $tablet: 768px;
 $phone: 480px;
+
+$phone_mini: 384px;
+
 
 
 //LAYOUT//
@@ -24,6 +29,8 @@ $phone: 480px;
 @import "section/pagination.scss";
 
 @import "section/first.scss";
+
+@import "section/hamburger_menu.scss";
 
 @import "section/second.scss";
 
