--- a/SCSS/section/first.scss
+++ b/SCSS/section/first.scss
@@ -82,6 +82,9 @@
      font-size: rem(13px);
      text-transform: uppercase;
  
+     @include tablet{
+         font-size: rem(24px);
+     }
         
     }
 
@@ -142,7 +145,7 @@
     margin: auto;
  }
  
- .content__text{
+ .content__box{
      max-width: 50%;
      margin-left: rem(12px);
 
@@ -165,15 +168,20 @@
         flex-wrap: nowrap;
         text-align: center;
         margin-top: rem(27px);
-        font-size: 50px;
+       // font-size: 50px;//
      }
 
      @include phone{
-        font-size: 63px;
+       // font-size: 63px;//
+     } 
+
+
+     @include phone_mini{
+         margin-top: rem(5px);
      }
  }
  
- .content__text-text{
+ .content__text{
      font-family: 'lifehackmedium';
      font-size: rem(65px);
      margin: rem(22px) rem(0px) rem(0px) rem(3px);
@@ -182,8 +190,13 @@
      letter-spacing: rem(-2px);
 
      @include tablet{
-       
+       margin-left: 0px;
         text-align: center;
+     }
+
+     @include phone{
+         margin-top: rem(15px);
+         font-size: rem(53px);
      }
 
      
@@ -197,6 +210,10 @@
 
     @include phone{
         height: 2.14286rem;
+    }
+
+    @include phone_mini{
+        padding-bottom: rem(6px);
     }
     
  }
@@ -217,7 +234,7 @@
 }
 
 
-.burger{
+.hamburger{
     width: rem(27px);
     height: rem(27px);
     display: none;
@@ -229,33 +246,24 @@
 
         
     }
-}
 
-.burger-link{
-    display: block;
-    content: '';
-    @include line(25px, 5px, $white);
-    margin: rem(11px) rem(0px) rem(4px) rem(0px);
-    position: absolute;
+    .hamburger-link{
 
-    &:before{
-        content: '';
-        @include line(25px, 5px, $white);
-        margin: rem(9px) rem(0px) rem(5px) rem(-12px);
-        position: absolute;
-    }
+        width: 100%;
+        height: 100%;
+       
 
-   
 
-    &:after{
-        content: '';
-        @include line(25px, 5px, $white);
-        margin: rem(-10px) rem(0px) rem(0px) rem(-12px);
-        position: absolute;
+        .hamburger__icon{
+            fill: $white;
+            height: 100%;
+            width: 100%;
+        }
+    
+    
     }
 }
 
 
-.burger__title, .review__title, .map__title {
-    display: none;
-}
+
+
