--- a/SCSS/section/order.scss
+++ b/SCSS/section/order.scss
@@ -32,6 +32,10 @@
     display: flex;
     flex-direction: column;
     align-items: center;
+
+    @include phone_mini{
+        height: 90%;
+    }
 }
 
 
@@ -207,7 +211,8 @@ label.form__radio-title:before {
     }    
 
  input.form__radio:checked + label.form__radio-title:before {
-    background-image: url('../images/orders/ellipse.png');
+    background: url('../images/orders/ellipse.png') no-repeat center;
+    background-color: white;
         
         }
 
@@ -250,8 +255,10 @@ label.form__checkbox-title:before {
 
 
     @include phone{
-        margin-top: 3.64286rem;
+        margin-top: rem(36px);
     }
+
+    
 }
 
 
@@ -270,6 +277,10 @@ label.form__checkbox-title:before {
         &:hover{
             background-color: #c1401e;
         }
+
+     @include phone_mini{
+        padding: rem(7px) rem(16px) rem(18px) rem(16px);
+     }   
 }
 
 .form__btns-clear{
